// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlidingPanel renders correctly with children 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "backgroundColor": "#000",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    disableScrollViewPanResponder={true}
    pointerEvents="box-none"
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#313131",
        "bottom": -1292,
        "flex": 1,
        "height": 1292,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": Array [
          Object {
            "translateY": -0,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#313131",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "borderRadius": 1,
              "height": 3,
              "marginBottom": 16,
              "marginTop": 16,
              "width": 40,
            },
          ]
        }
      />
      <View
        style={
          Object {
            "height": 140,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`SlidingPanel renders correctly without children 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "backgroundColor": "#000",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    disableScrollViewPanResponder={true}
    pointerEvents="box-none"
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#313131",
        "bottom": -1292,
        "flex": 1,
        "height": 1292,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": Array [
          Object {
            "translateY": -0,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#313131",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "borderRadius": 1,
              "height": 3,
              "marginBottom": 16,
              "marginTop": 16,
              "width": 40,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;
